feat(ssr-example): finish basic SSR example

--- a/examples/ssr/src/index.template.html
+++ b/examples/ssr/src/index.template.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Vue InstantSearch | SSR POC</title>
     <meta charset="utf-8">
-    <title>example-ssr</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script src="/dist/build.js"></script>
+    <!--vue-ssr-outlet-->
   </body>
 </html>
