chore(ssr-example): update page title

--- a/examples/ssr/src/index.template.html
+++ b/examples/ssr/src/index.template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Vue InstantSearch | SSR POC</title>
+    <title>Server Side Rendering example | Vue InstantSearch</title>
     <meta charset="utf-8">
   </head>
   <body>
