--- a/examples/quick-start/index.html
+++ b/examples/quick-start/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Welcome to Vue</title>
   <script src="https://unpkg.com/vue/dist/vue.js"></script>
-  <script src="./node_modules/vue-instantsearch/dist/vue-instantsearch.js"></script>
+  <script src="../../node_modules/vue-instantsearch/dist/vue-instantsearch.js"></script>
   <link href="styles.css" media="all" rel="stylesheet" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
@@ -12,7 +12,7 @@
     <ais-index app-id="latency" api-key="6be0576ff61c053d5f9a3225e2a90f76" index-name="ikea">
       <ais-search-box placeholder="Search for a product..."></ais-search-box>
       <ais-results>
-        <template scope="{ result }">
+        <template slot-scope="{ result }">
           <div class="search-result">
             <img class="result__image img-responsive" :src="result.image">
 
