fix: quick start

--- a/examples/quick-start/index.html
+++ b/examples/quick-start/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="app">
-    <ais-index app-id="latency" api-key="6be0576ff61c053d5f9a3225e2a90f76" index-name="ikea">
+    <ais-index app-id="latency" api-key="6be0576ff61c053d5f9a3225e2a90f76" index-name="instant_search">
       <ais-search-box placeholder="Search for a product..."></ais-search-box>
       <ais-results>
         <template slot-scope="{ result }">
